Changes from jTDS 1.1
=======================

06/21/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1222205] getParameterMetaData returns not
   implemented.

===============================================================================
06/16/2005 - jTDS 1.1 released
===============================================================================

Changes from jTDS 1.0.3
=======================

06/16/2005 - Alin Sinpalean
 o Added the useLOBs connection property to control whether large types (IMAGE
   and TEXT/NTEXT) should be mapped by default to LOBs or Java types (String
   and byte[]). Default is true, i.e. map to LOBs by default.
 o Updated version number to 1.1.

06/15/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1047208] SQLException chaining not implemented
   correctly, with a few additions in places where exceptions might have gotten
   lost.
 o Removed SSPIJNIClient.main() and hexDump() as they weren't used anyway.

06/10/2005 - Alin Sinpalean
 o Corrected bug [1217786] Moving to "beforeFirst" with ResultSet.absolute(-X)
   and a number of related absolute() and relative() issues with
   MSCursorResultSet.

06/03/2005 - Alin Sinpalean
 o Removed no longer needed cache classes.
 o Corrected an issue with savepoints, which was causing cached procedures to
   not be dropped by the driver on a savepoint rollback.
 o Removed already fixed or outdated TODO comments.

06/02/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1212905] PreparedStatement.setFloat issue.
 o Moved all the "create cursor or use direct execution" logic into a single
   place and corrected an issue where useCursors=true would cause a cursor
   prepare to be issued even on executeUpdate().

06/01/2005 - Alin Sinpalean
 o Initial implementation for extended scrollability/updatability support
   (TYPE_SCROLL_SENSITIVE for keyset cursors, TYPE_SCROLL_SENSITIVE + 1 for
   dynamic cursors, CONCUR_UPDATABLE for optimistic concurrency w/ timestamps,